[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/board.jpg" type="Texture" id=1]
[ext_resource path="res://src/Ball.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/Board.gd" type="Script" id=4]
[ext_resource path="res://src/Kenney Bold.ttf" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=1]
outline_size = 1
font_data = ExtResource( 5 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 245.889, 3.97972 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 10, 52.9791 )

[node name="Board" type="Node2D"]
script = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 192, 112 )
scale = Vector2( 1.2, 1.2 )
texture = ExtResource( 1 )

[node name="Camera2D" type="Camera2D" parent="Sprite"]
position = Vector2( -159.869, -89.7061 )
anchor_mode = 0
current = true
zoom = Vector2( 0.3, 0.3 )
drag_margin_h_enabled = true
drag_margin_v_enabled = true

[node name="Player_1" parent="." instance=ExtResource( 3 )]
position = Vector2( -0.2, 108 )
rotation = 1.5708

[node name="Player_2" parent="." instance=ExtResource( 3 )]
position = Vector2( 386.04, 108 )
rotation = 1.5708
scale = Vector2( 1, -1 )
prefix = "p2"

[node name="Ball" parent="." groups=[
"Ball",
] instance=ExtResource( 2 )]
position = Vector2( 191.993, 107.394 )

[node name="Score" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score2" type="Label" parent="Score"]
margin_left = 200.0
margin_top = 10.0
margin_right = 274.25
margin_bottom = 35.5
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score1" type="Label" parent="Score"]
margin_left = 104.0
margin_top = 10.0
margin_right = 190.5
margin_bottom = 36.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "1"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Walls" type="Node2D" parent="."]

[node name="StaticBody2D4" type="StaticBody2D" parent="Walls"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/StaticBody2D4"]
position = Vector2( 387.541, 107.353 )
rotation = 1.5708
shape = SubResource( 2 )

[node name="StaticBody2D3" type="StaticBody2D" parent="Walls"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/StaticBody2D3"]
position = Vector2( 212.479, -0.44545 )
shape = SubResource( 2 )

[node name="StaticBody2D2" type="StaticBody2D" parent="Walls"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/StaticBody2D2"]
position = Vector2( -6.68176, 112.253 )
rotation = 1.5708
shape = SubResource( 2 )

[node name="StaticBody2D" type="StaticBody2D" parent="Walls"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/StaticBody2D"]
position = Vector2( 211.143, 224.061 )
shape = SubResource( 2 )

[node name="Point" type="Node2D" parent="."]

[node name="Blue" type="Area2D" parent="Point"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Point/Blue"]
position = Vector2( -6.2363, 104.681 )
shape = SubResource( 3 )

[node name="Red" type="Area2D" parent="Point"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Point/Red"]
position = Vector2( 391.105, 106.908 )
shape = SubResource( 3 )

[connection signal="body_entered" from="Point/Blue" to="." method="_on_Blue_body_entered"]
[connection signal="body_entered" from="Point/Red" to="." method="_on_Red_body_entered"]
